--- a/sgc-back/package.json
+++ b/sgc-back/package.json
@@ -1,9 +1,11 @@
 {
   "name": "sgc-back",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "SGC Backend for Hospital & Driver",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
